# omnisolver-bruteforce

./: .clang-format  .gitignore  .readthedocs.yml  mkdocs.yml  pyproject.toml
.github/workflows/: build_and_test.yml
docs/: index.md  requirements.txt
docs/reference/: omnisolver_bruteforce_distributed.md  omnisolver_bruteforce_sampler.md
examples/: distributed.py
omnisolver/bruteforce/: gpu.py
omnisolver/bruteforce/cpu/: gray_code.py  qubo.py  search.py
omnisolver/bruteforce/gpu/: __init__.py  distributed.py  sampler.py
omnisolver/extensions/: bruteforce_gpu.cu  bruteforce_gpu.h  bruteforce_wrapper_gpu.pyx
tests/cpu/: test_chunking.py  test_gray_code.py  test_qubo.py
tests/gpu/: test_bruteforce_gpu_sampler.py
