[build-system]
requires = ["setuptools-cuda", "setuptools", "wheel", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "omnisolver-bruteforce"
version = "0.0.1"
dependencies = [
    "omnisolver ~= 0.0.3",
    "dimod ~= 0.12",
    "numba ~= 0.56.4",
    "pluggy ~= 0.13.1",
    "numpy ~= 1.19.4"
]

[tool.setuptools.packages]
find = {exclude=["instances"]}

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
)/
'''
